improved nav frame
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/wow_guild/trunk@18308 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/mod2/style.css
+++ b/mod2/style.css
@@ -1,6 +1,8 @@
 
-table {background-color:#000;padding:3px;border:2px inset #aaa;}
-table tr td {padding:0 5px;}
+#ext-wow-guild-mod2-index-php {background-color:#000;margin:0;padding:0;}
+
+table {padding:0;margin:0;}
+table tr td {padding:0 5px;vertical-align: middle;color:#fff;border-bottom:1px dotted #999999;}
 table tr td a {color:inherit;}
 table tr td a:hover {color:inherit;text-decoration:underline;}
 table tr.class01 td {color:#C79C6E;} /*Warrior*/
